Navbar overflow fix

--- a/trafika/static/css/mystyle.css
+++ b/trafika/static/css/mystyle.css
@@ -6,7 +6,7 @@
     top: 0;
     left: 0;
     overflow-x: hidden;
-    padding-top: 20px;
+    padding-top: 120px;
 }
 
 #perpage{
@@ -158,3 +158,10 @@ p, .statistics-label{
   margin:auto;
 }
 
+#navlinks{
+  height: 100%;
+}
+
+#navbarNavAltMarkup{
+  height: 100%;
+}
